<resources>
    <string name="app_name">ExamenFinalCrisjerry</string>
        <string name="title">Registro de Medidor</string>
        <string name="meter">Medidor:</string>
        <string name="date">Fecha:</string>
        <string name="meter_value_hint">Valor del Medidor</string>
        <string name="date_hint">Fecha (dd/mm/yyyy)</string>
        <string name="water">Agua</string>
        <string name="electricity">Luz</string>
        <string name="gas">Gas</string>
        <string name="register_measurement">Registrar Medición</string>
</resources>